force-app/main/default/objects/Product_Categories__c/Product_Categories__c.object-meta.xml
<CustomObject>
    <description>Custom salesforce object which will be the child of category and product to link product and category.</description>
    <label>Product Categories</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Product Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>