force-app/main/default/objects/Product_Categories__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>The category for the product</inlineHelpText>
    <label>Category</label>
    <referenceTo>Categories__c</referenceTo>
    <relationshipName>Product_Categorys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>