force-app/main/default/objects/Product_Categories__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The product for the category.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Categorys</relationshipName>
    <type>Lookup</type>
</CustomField>